bug squashing

--- a/src/app/beast-view/beast-view-gm/beast-view-gm.component.css
+++ b/src/app/beast-view/beast-view-gm/beast-view-gm.component.css
@@ -264,10 +264,6 @@ mat-chip .fa-chevron-up, mat-chip .fa-chevron-down, mat-chip .fa-expand {
     display: flex;
 }
 
-.tables-to-the-side .view-table-shell {
-    min-width: 36%;
-}
-
 @media (max-width: 1246px) {
     .vitals-and-movement-shell .vitals-shell {
         width: 100%;
