--- a/src/app/beast-view/beast-view-gm/view-table/view-table.component.css
+++ b/src/app/beast-view/beast-view-gm/view-table/view-table.component.css
@@ -35,7 +35,7 @@ table thead input::placeholder {
 
 table tbody tr td:first-child, table tbody tr th:first-child, .small-width {
     text-align: right;
-    width: 63px;
+    min-width: 50px;
 }
 
 tbody tr:nth-child(odd) {
@@ -43,7 +43,11 @@ tbody tr:nth-child(odd) {
 }
 
 th, td {
-    padding: 4px 7px;
+    padding: 4px 7px;   
+}
+
+td:nth-child(2) {
+    min-width: 136px;
 }
 
 table tr th {
